--- a/BullsAndCows.Desktop.Console/App.config
+++ b/BullsAndCows.Desktop.Console/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="Welcome Message" value="Welcome to “Bulls and Cows” game. Please try to guess my secret 4-digit number."/>
+    <add key="Help Message" value="Use 'top' to view the top scoreboard, 'restart' to start a new game and 'help' to cheat and 'exit' to quit the game."/>
+  </appSettings>
 </configuration>
