--- a/BullsAndCows.Tests/BullsAndCows.Tests.csproj
+++ b/BullsAndCows.Tests/BullsAndCows.Tests.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BullsAndCows.Utils\BullsAndCows.Utils.csproj">
+      <Project>{cd6eb355-5086-4a0a-8c5f-86875a6317ab}</Project>
+      <Name>BullsAndCows.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
