--- a/BullsAndCows.Utils/BullsAndCows.Utils.csproj
+++ b/BullsAndCows.Utils/BullsAndCows.Utils.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{26496E1A-CAD4-43F1-AD3A-2CCC63AFF63D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{CD6EB355-5086-4A0A-8C5F-86875A6317AB}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BullsAndCows.Desktop.Console</RootNamespace>
-    <AssemblyName>BullsAndCows.Desktop.Console</AssemblyName>
+    <RootNamespace>BullsAndCows.Utils</RootNamespace>
+    <AssemblyName>BullsAndCows.Utils</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,17 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppMain.cs" />
+    <Compile Include="ConfigReader.cs" />
+    <Compile Include="ConsoleRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BullsAndCows.Utils\BullsAndCows.Utils.csproj">
-      <Project>{cd6eb355-5086-4a0a-8c5f-86875a6317ab}</Project>
-      <Name>BullsAndCows.Utils</Name>
-    </ProjectReference>
+    <Compile Include="Renderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
