add almost complete project expect 1-2 needs refactured methods.

--- a/BullsAndCows.Desktop.Console/BullsAndCows.Desktop.Console.csproj
+++ b/BullsAndCows.Desktop.Console/BullsAndCows.Desktop.Console.csproj
@@ -53,6 +53,10 @@
       <Project>{cd6eb355-5086-4a0a-8c5f-86875a6317ab}</Project>
       <Name>BullsAndCows.Utils</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Engine\BullsAndCows.Engine.csproj">
+      <Project>{494ecec3-338c-429a-8fb7-6403ff16114d}</Project>
+      <Name>BullsAndCows.Engine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
