--- a/BullsAndCows.Tests/BullsAndCows.Tests.csproj
+++ b/BullsAndCows.Tests/BullsAndCows.Tests.csproj
@@ -50,13 +50,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ScoreboardTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GameEngineTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BullsAndCows.Utils\BullsAndCows.Utils.csproj">
       <Project>{cd6eb355-5086-4a0a-8c5f-86875a6317ab}</Project>
       <Name>BullsAndCows.Utils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Engine\BullsAndCows.Engine.csproj">
+      <Project>{494ecec3-338c-429a-8fb7-6403ff16114d}</Project>
+      <Name>BullsAndCows.Engine</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
